# vibeqlite

./: .gitignore  ARCHITECTURE.md  DEMO.md  IMPL_PLAN.md  LICENSE  PLAN.md  README.md  TALK.md  cluster.yaml.example  pyproject.toml
.github/prompts/: implement.prompt.md
cli/: vibeqlite.py
cluster/: __init__.py  clock.py  gossip.py  registry.py
node/: __init__.py  llm_engine.py  memory.py  server.py
node/prompts/: system.md
tests/: test_phase0.py  test_phase1.py  test_phase10.py  test_phase11.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_phase9.py
